リンクを追加

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
                 <h2>リリースアプリ</h2>
                 <p id="link-practice-camera" class="text-info link">practice-camera:写真構図トレーニングカメラ<br/>[click me]</p>
                 <a href="https://itunes.apple.com/jp/app/practice-camera-xie-zhen-gou/id954811892?mt=8&uo=4" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/ja_jp//images/web/linkmaker/badge_appstore-lrg.png) no-repeat;width:135px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/ja_jp//images/web/linkmaker/badge_appstore-lrg.svg);}"></a>
+                <p id="link-listen" class="text-info link">リッスン to the 外国語<br/>[click me]</p>
+                <a href="https://itunes.apple.com/jp/app/id979555997?mt=8&ign-mpt=uo%3D4" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/ja_jp//images/web/linkmaker/badge_appstore-lrg.png) no-repeat;width:135px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/ja_jp//images/web/linkmaker/badge_appstore-lrg.svg);}"></a>
             </div>
             
             <hr>
@@ -186,6 +188,7 @@
                 <h2>ソーシャルメディア</h2>
                 <p id="link-twitter" class="text-info link">開発者Twitter<br/>[click me]</p>
                 <p id="link-swift" class="text-info link">Swift体験記<br/>[click me]</p>
+                <p id="link-salware" class="text-info link">FC salware<br/>[click me]</p>
             </div>
           
             <hr>
